--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,6 +7,7 @@ sql:
       go:
         package: "repository"
         out: "internal/repository"
+        sql_package: "pgx/v5"
         emit_json_tags: true
         emit_prepared_queries: false
         emit_interface: true
